--- a/userChoice.html
+++ b/userChoice.html
@@ -5,24 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link rel means relationship -->
-    <link rel="stylesheet" href="userChoice.css"> 
+    <link rel="stylesheet" href="userChoice.css">
     <!-- href is only for linking not running -->
     <title>MUSIC RECOMMENDATIONS</title>
 </head>
 <body>
     <!-- use label instead of div because div has no semantic meaning and no click to focus (automatically jumps to typing do not have to click the box first) -->
-    <div class="mood">
-        <label for="Mood">What mood do you want to listen to? </label><br>
+    <div class = "container">
+        <div class="input">
+            <label for="Song">Song name: </label><br>
                                              <!-- br for line break -->
-        <input type="text" id="Mood">
+            <input type="text" id="Song" />
+        </div>
+
+
+        <div class="input">
+            <label for="Artist">Artist name: </label><br>
+                                             <!-- br for line break -->
+            <input type="text" id="Artist" />
+        </div>
+
+
+        <button id ="submit">Get Recommendations</button>
+
+
+        <div id="recommendations"></div>
     </div>
+
+
 
 
     <div class="back">          
-
         <div class="space"></div>
         <button id="backButton">Back to Home</button>
     </div>
-    <script src="userChoice.js"></script> 
+    <script src="userChoice.js"></script>
 </body>
 </html>
