--- a/userChoice.html
+++ b/userChoice.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="userChoice.css">
     <!-- href is only for linking not running -->
     <title>MUSIC RECOMMENDATIONS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- use label instead of div because div has no semantic meaning and no click to focus (automatically jumps to typing do not have to click the box first) -->
