--- a/310-project16-esther/userChoice.html
+++ b/310-project16-esther/userChoice.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="userChoice.css">
     <!-- href is only for linking not running -->
     <title>MUSIC RECOMMENDATIONS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- use label instead of div because div has no semantic meaning and no click to focus (automatically jumps to typing do not have to click the box first) -->
@@ -31,9 +32,6 @@
 
         <div id="recommendations"></div>
     </div>
-
-
-
 
     <div class="back">          
         <div class="space"></div>
